fixed overlapping of logo

--- a/static/css/components/merge-request-table.less
+++ b/static/css/components/merge-request-table.less
@@ -164,6 +164,7 @@
   td {
     vertical-align: top;
     padding: 1%;
+    width: auto;
   }
 }
 
